--- a/package.json
+++ b/package.json
@@ -9,32 +9,34 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "autoprefixer": "^6.3.6",
-    "browserify": "^13.0.1",
-    "cssnano": "^3.5.2",
     "domify": "^1.4.0",
     "dragula": "^3.6.8",
     "flexibility": "^1.0.5",
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-jade": "^1.1.0",
-    "gulp-minify": "0.0.11",
-    "gulp-postcss": "^6.1.1",
-    "gulp-sass": "^2.3.1",
+    "gulp-cli": "^2.3.0",
     "jade": "^1.11.0",
+    "jade-cli": "^0.1.1",
     "jstransformer-marked": "^1.0.1",
-    "marked": "^0.3.5",
     "mustache": "^2.2.1",
     "postcss": "^5.0.21",
-    "postcss-flexibility": "^1.0.3",
-    "postcss-font-magician": "^1.4.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "walk": "^2.3.9",
     "walker": "^1.0.7"
   },
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "md5": "^2.2.1"
+    "autoprefixer": "^6.7.7",
+    "browserify": "^13.3.0",
+    "cssnano": "^3.10.0",
+    "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-jade": "^1.1.0",
+    "gulp-minify": "0.0.11",
+    "gulp-postcss": "^6.4.0",
+    "gulp-sass": "^3.2.1",
+    "marked": "^0.3.19",
+    "md5": "^2.2.1",
+    "node-sass": "^4.14.1",
+    "postcss-flexibility": "^1.1.1",
+    "postcss-font-magician": "^1.6.1",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^1.1.2",
+    "walk": "^2.3.14"
   }
 }
